2006-01-19  Roman Kennke  <kennke@aicas.com>

	* native/target/generic/target_generic_misc.c:
	(targetGenericMisc_formatString): Added missing method.

2006-01-19  Wolfgang Baer  <WBaer@gmx.de>

	* m4/acinclude.m4: Test also for ecj found before exiting configure
	with no javac found error message. 

2006-01-19  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #23212
	* gnu/regexp/RE.java(initialize): Support escaped characters such as
	\0123, \x1B, \u1234.
	(getEscapedChar): New method.
	(CharExpression): New inner class.
	(getCharExpression): New Method.
	* gnu/regexp/RESyntax.java(RE_OCTAL_CHAR, RE_HEX_CHAR,
	RE_UNICODE_CHAR): New syntax bits.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* native/target/Makefile.am: Fixed so that posix stuff is really
	only built when requested.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java (editingStopped, editingCancelled):
	Repaint the edited cell.
	(setValueAt): Do not add the value object to this container.
	(editorTimer, rowBeingEdited, columnBeingEdited, oldCellValue): Removed.
	(editingStopped): Use editingRow, editingColumn and not
	rowBeingEdited, columnBeingEdited. (editValueAt): rewritten.
	(doLayout): Move the editor component, if present, into the new
	location and call repaint(). (moveToCellBeingEdited): new method.
	(TableTextField): new inner class.
	(getDefaultEditor): Instantiante TableTextField, not JTextField.
	(setValueAt): Repaint the changed segment.
	(createDefaultEditors): Implemented.
	(BooleanCellRenderer): Center the checkbox and use the default foreground
	and background colors.   
	* javax/swing/plaf/basic/BasicTableUI.java
	(paintCell): Do not paint the caret here. Do not accept unused parameters.
	(paint): No need to allocate rectangle for each cell.   
	* javax/swing/DefaultCellEditor.java: Rewritten.         
	* examples/gnu/classpath/examples/swing/Demo.java (mkTable):
	Use TableDemo.java table example.